  o getError method added
+ Form - fixed addRadioAssoc putting correct labels
+ Database - added conditional define to remove dsn from log message
  if the db connection fails.
+ Error - if error.php is not found in local config directory, it
  looks in the module's inc directory.
+ Moved conf/error.php to inc/
+ Some edits to make datepicker color neutral (i.e. gray)
+ Updated: javascript/jquery/jquery.js, javascript/datepicker/ui.datepicker.css

4 February 2009
+ Added setSecure function to Link

29 January 2009
+ Getting file types from inc/ directory instead of config directory.
+ Using utf8 with completion check as a backup to iconv if not
  compiled.

23 January 2009
+ Extra apostrophe check added to prompt script
+ Dropped unneeded array declaration from Init.php
+ Added Format selection to fckeditor, moved buttons around,
+ Updated: javascript/prompt/default.php, javascript/editor/fckeditor/custom.js
  javascript/editor/fckeditor/phpwsstyles.xml

21 January 2009
+ Checking user session in security
+ DBPager - was missing column names when prefixed by table name

15 January 2009
+ Database
  o Added moveRow function
  o Added column formatting check on addColumn and addWhere
+ DBPager - if a sort column is reset, indexby is no longer included
  on the link

9 January 2009
+ Added 'RELEASE' to do-no-allow database list
+ Added error check to Form_Element
+ Fixed naughty word parsing

Version 1.9.1
---------------------------------------------------------------------
7 January 2009
+ Big change to character parsing. Should prevent certain characters
  from getting mangled in posting. Huge thanks to Verdon.

6 January 2009
+ Added extra filters to prevent values other than tables getting
  prefixed in a select statement. Thanks Olivier Sannier.
+ Added an ignore_table parameter to the addJoin function. Doesn't
  force table added to the join. Allows multiple conditional arrays to
  be added to join_on_1 and join_on_2

19 December 2008