@@ -40,7 +40,7 @@ function bb_filter($bb2html)
         $i++;
     }
 
-    $bb2html = str_replace("\n", ':newline:', $bb2html);
+    $bb2html = str_replace("\n", ' :newline: ', $bb2html);
 
     // now the bbcode proper..
 
@@ -154,7 +154,7 @@ function bb_filter($bb2html)
         $bb2html = str_replace("***pre_string***$i", '<pre>'.substr($pre[$i],5,-6).'</pre>', $bb2html);
     }
 
-    $bb2html = str_replace(':newline:', "\n", $bb2html);
+    $bb2html = str_replace(' :newline: ', "\n", $bb2html);
     return $bb2html;
 }
 
